--- a/OpenCVTools/OpenCVTools.vcxproj.filters
+++ b/OpenCVTools/OpenCVTools.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="OpenCVFFMpegTools.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="COpenCVTools.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
     <ClInclude Include="CvTranslator.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -42,6 +45,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="OpenCVFFMpegTools.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="COpenCVTools.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="CvTranslator.cpp">
