--- a/OpenCVTools/OpenCVTools.vcxproj.filters
+++ b/OpenCVTools/OpenCVTools.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="AvWorker.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="VideoHandle.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
