--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ ipch/
 # ===================== 第三方库/依赖 =====================
 ## OpenCV/FFmpeg 二进制文件（只保留源码/头文件，忽略二进制）
 OpenCVTools/3rd
+build-MultiMediaTool-Desktop_Qt_5_12_11_MSVC2017_64bit-Debug
 OpenCVTools/3rd/ffmpeg/bin/
 OpenCVTools/3rd/ffmpeg/lib/
 OpenCVTools/3rd/opencv/bin/
@@ -63,7 +64,7 @@ bin/*.bmp
 bin/*.docx
 bin/*.mp4
 bin/*.pdf
-
+bin
 ## Python 编译产物（WordToPdf 模块）
 __pycache__/
 *.pyc
