--- a/build-mplayer-Desktop_Qt_5_12_11_MSVC2017_64bit-Debug/Makefile.Debug
+++ b/build-mplayer-Desktop_Qt_5_12_11_MSVC2017_64bit-Debug/Makefile.Debug
@@ -680,6 +680,21 @@ debug\moc_mplayer.cpp: ..\mplayer\src\mplayer.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qicon.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\QProgressBar \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qprogressbar.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\QComboBox \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qcombobox.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qabstractitemdelegate.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qstyleoption.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qabstractspinbox.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qvalidator.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qregularexpression.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qslider.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qabstractslider.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qstyle.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qtabbar.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qtabwidget.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qrubberband.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qabstractitemmodel.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\QMetaType \
 		debug\moc_predefs.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\bin\moc.exe
 	D:\5.12\5.12.11\msvc2017_64\bin\moc.exe $(DEFINES) --compiler-flavor=msvc --include D:/vsPro/MultiMediaTool/build-mplayer-Desktop_Qt_5_12_11_MSVC2017_64bit-Debug/debug/moc_predefs.h -ID:/5.12/5.12.11/msvc2017_64/mkspecs/win32-msvc -ID:/vsPro/MultiMediaTool/mplayer -ID:/vsPro/MultiMediaTool/mplayer/3rd/include -ID:/5.12/5.12.11/msvc2017_64/include -ID:/5.12/5.12.11/msvc2017_64/include/QtOpenGL -ID:/5.12/5.12.11/msvc2017_64/include/QtWidgets -ID:/5.12/5.12.11/msvc2017_64/include/QtGui -ID:/5.12/5.12.11/msvc2017_64/include/QtANGLE -ID:/5.12/5.12.11/msvc2017_64/include/QtNetwork -ID:/5.12/5.12.11/msvc2017_64/include/QtCore -I. -ID:\vs\vs2017\Product\VC\Tools\MSVC\14.16.27023\ATLMFC\include -ID:\vs\vs2017\Product\VC\Tools\MSVC\14.16.27023\include -I"D:\Windows Kits\10\include\10.0.26100.0\ucrt" -I"D:\Windows Kits\10\include\10.0.26100.0\shared" -I"D:\Windows Kits\10\include\10.0.26100.0\um" -I"D:\Windows Kits\10\include\10.0.26100.0\winrt" -I"D:\Windows Kits\10\include\10.0.26100.0\cppwinrt" -ID:\masm32\include ..\mplayer\src\mplayer.h -o debug\moc_mplayer.cpp
@@ -1239,6 +1254,21 @@ debug\main.obj: ..\mplayer\src\main.cpp ..\..\..\5.12\5.12.11\msvc2017_64\includ
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qicon.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\QProgressBar \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qprogressbar.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\QComboBox \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qcombobox.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qabstractitemdelegate.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qstyleoption.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qabstractspinbox.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qvalidator.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qregularexpression.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qslider.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qabstractslider.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qstyle.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qtabbar.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qtabwidget.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qrubberband.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qabstractitemmodel.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\QMetaType \
 		..\mplayer\src\myipcmgr.h \
 		..\mplayer\src\ipcmgrbase.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtNetwork\QLocalServer \
@@ -1503,10 +1533,8 @@ debug\mglwidget.obj: ..\mplayer\src\mglwidget.cpp ..\mplayer\src\mglwidget.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qmessagebox.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qdialog.h
 
-debug\mplayer.obj: ..\mplayer\src\mplayer.cpp ..\mplayer\src\mplayer.h \
-		..\mplayer\src\mglwidget.h \
-		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\QOpenGLWidget \
-		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qopenglwidget.h \
+debug\mplayer.obj: ..\mplayer\src\mplayer.cpp ..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\QApplication \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qapplication.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qtwidgetsglobal.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qtguiglobal.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qglobal.h \
@@ -1532,23 +1560,20 @@ debug\mplayer.obj: ..\mplayer\src\mplayer.cpp ..\mplayer\src\mplayer.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qversiontagging.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qtgui-config.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qtwidgets-config.h \
-		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\QWidget \
-		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qwidget.h \
-		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qwindowdefs.h \
-		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qobjectdefs.h \
-		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qnamespace.h \
-		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qobjectdefs_impl.h \
-		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qwindowdefs_win.h \
-		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qobject.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qcoreapplication.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qstring.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qchar.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qbytearray.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qrefcount.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qnamespace.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qarraydata.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qstringliteral.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qstringalgorithms.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qstringview.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qstringbuilder.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qobject.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qobjectdefs.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qobjectdefs_impl.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qlist.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qalgorithms.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qiterator.h \
@@ -1564,11 +1589,17 @@ debug\mplayer.obj: ..\mplayer\src\mplayer.cpp ..\mplayer\src\mplayer.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qvarlengtharray.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qcontainerfwd.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qobject_impl.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qeventloop.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qwindowdefs.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qwindowdefs_win.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qpoint.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qsize.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qcursor.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qdesktopwidget.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qwidget.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qmargins.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qpaintdevice.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qrect.h \
-		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qsize.h \
-		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qpoint.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qpalette.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qcolor.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qrgb.h \
@@ -1594,7 +1625,6 @@ debug\mplayer.obj: ..\mplayer\src\mplayer.cpp ..\mplayer\src\mplayer.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qfontmetrics.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qfontinfo.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qsizepolicy.h \
-		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qcursor.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qkeysequence.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qevent.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qvariant.h \
@@ -1610,6 +1640,14 @@ debug\mplayer.obj: ..\mplayer\src\mplayer.cpp ..\mplayer\src\mplayer.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qfiledevice.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qvector2d.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qtouchdevice.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qguiapplication.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qinputmethod.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\QDesktopWidget \
+		..\mplayer\src\mplayer.h \
+		..\mplayer\src\mglwidget.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\QOpenGLWidget \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qopenglwidget.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\QWidget \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\QSurfaceFormat \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qsurfaceformat.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qopengl.h \
@@ -1686,6 +1724,21 @@ debug\mplayer.obj: ..\mplayer\src\mplayer.cpp ..\mplayer\src\mplayer.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qicon.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\QProgressBar \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qprogressbar.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\QComboBox \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qcombobox.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qabstractitemdelegate.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qstyleoption.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qabstractspinbox.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui\qvalidator.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qregularexpression.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qslider.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qabstractslider.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qstyle.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qtabbar.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qtabwidget.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qrubberband.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qabstractitemmodel.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\QMetaType \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\QHBoxLayout \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qboxlayout.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qlayout.h \
@@ -1694,7 +1747,13 @@ debug\mplayer.obj: ..\mplayer\src\mplayer.cpp ..\mplayer\src\mplayer.h \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\QVBoxLayout \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\QString \
 		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\QThread \
-		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qthread.h
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qthread.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\QVariant \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\QFileDialog \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qfiledialog.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qdir.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore\qfileinfo.h \
+		..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets\qdialog.h
 
 debug\myipcmgr.obj: ..\mplayer\src\myipcmgr.cpp ..\mplayer\src\myipcmgr.h \
 		..\mplayer\src\ipcmgrbase.h \
