--- a/build-mplayer-Desktop_Qt_5_12_11_MSVC2017_64bit-Debug/Makefile.Debug
+++ b/build-mplayer-Desktop_Qt_5_12_11_MSVC2017_64bit-Debug/Makefile.Debug
@@ -14,8 +14,8 @@ EQ            = =
 CC            = cl
 CXX           = cl
 DEFINES       = -DUNICODE -D_UNICODE -DWIN32 -D_ENABLE_EXTENDED_ALIGNED_STORAGE -DWIN64 -DWIN32_LEAN_AND_MEAN -DQT_QML_DEBUG -DQT_OPENGL_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB
-CFLAGS        = -nologo -Zc:wchar_t -FS -Zc:strictStrings -Zi -MDd -W3 -w44456 -w44457 -w44458 /Fddebug\mplayer.vc.pdb $(DEFINES)
-CXXFLAGS      = -nologo -Zc:wchar_t -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -Zc:referenceBinding -Zc:__cplusplus -Zi -MDd -W3 -w34100 -w34189 -w44996 -w44456 -w44457 -w44458 -wd4577 -wd4467 -EHsc /Fddebug\mplayer.vc.pdb $(DEFINES)
+CFLAGS        = -nologo -Zc:wchar_t -FS -Zc:strictStrings /utf-8 -Zi -MDd -W3 -w44456 -w44457 -w44458 /Fddebug\mplayer.vc.pdb $(DEFINES)
+CXXFLAGS      = -nologo -Zc:wchar_t -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -Zc:referenceBinding -Zc:__cplusplus /utf-8 -Zi -MDd -W3 -w34100 -w34189 -w44996 -w44456 -w44457 -w44458 -wd4577 -wd4467 -EHsc /Fddebug\mplayer.vc.pdb $(DEFINES)
 INCPATH       = -I..\mplayer -I. -I..\mplayer\3rd\include -I..\..\..\5.12\5.12.11\msvc2017_64\include -I..\..\..\5.12\5.12.11\msvc2017_64\include\QtOpenGL -I..\..\..\5.12\5.12.11\msvc2017_64\include\QtWidgets -I..\..\..\5.12\5.12.11\msvc2017_64\include\QtGui -I..\..\..\5.12\5.12.11\msvc2017_64\include\QtANGLE -I..\..\..\5.12\5.12.11\msvc2017_64\include\QtNetwork -I..\..\..\5.12\5.12.11\msvc2017_64\include\QtCore -Idebug -I/include -I..\..\..\5.12\5.12.11\msvc2017_64\mkspecs\win32-msvc 
 LINKER        = link
 LFLAGS        = /NOLOGO /DYNAMICBASE /NXCOMPAT /DEBUG /SUBSYSTEM:WINDOWS "/MANIFESTDEPENDENCY:type='win32' name='Microsoft.Windows.Common-Controls' version='6.0.0.0' publicKeyToken='6595b64144ccf1df' language='*' processorArchitecture='*'"
@@ -199,7 +199,7 @@ compiler_moc_predefs_make_all: debug\moc_predefs.h
 compiler_moc_predefs_clean:
 	-$(DEL_FILE) debug\moc_predefs.h
 debug\moc_predefs.h: ..\..\..\5.12\5.12.11\msvc2017_64\mkspecs\features\data\dummy.cpp
-	cl -BxD:\5.12\5.12.11\msvc2017_64\bin\qmake.exe -nologo -Zc:wchar_t -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -Zc:referenceBinding -Zc:__cplusplus -Zi -MDd -W3 -w34100 -w34189 -w44996 -w44456 -w44457 -w44458 -wd4577 -wd4467 -E ..\..\..\5.12\5.12.11\msvc2017_64\mkspecs\features\data\dummy.cpp 2>NUL >debug\moc_predefs.h
+	cl -BxD:\5.12\5.12.11\msvc2017_64\bin\qmake.exe -nologo -Zc:wchar_t -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -Zc:referenceBinding -Zc:__cplusplus /utf-8 -Zi -MDd -W3 -w34100 -w34189 -w44996 -w44456 -w44457 -w44458 -wd4577 -wd4467 -E ..\..\..\5.12\5.12.11\msvc2017_64\mkspecs\features\data\dummy.cpp 2>NUL >debug\moc_predefs.h
 
 compiler_moc_header_make_all: debug\moc_ipcmgrbase.cpp debug\moc_mglwidget.cpp debug\moc_mplayer.cpp debug\moc_myipcmgr.cpp debug\moc_player.cpp
 compiler_moc_header_clean:
